# youi-tauri-app-old

./: .gitignore  LICENSE  README.md  package.json  svelte.config.js  tsconfig.json  vite.config.ts
src/: app.css  app.html  hooks.ts  main.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: app.init.sqlite.sql
src-tauri/src/: fs.rs  main.rs
src/data/: custom-ds.ts  dmp-db.ts  register.ts
src/lib/: form.ts
src/lib/app-icon/: area-chart.js  back.js  bar-chart-h.js  cross-table.js  etl.js  funnel-chart.js  icons.ts  index.ts  line-chart.js  markdown.js  notebook.js  number.js  pie-chart.js  query.js  radar-chart.js  report.js  save-as.js  task-list.js  text.js  today.js  tow-axis-chart.js  xmind.js
src/lib/app-mocks/: app.mock.ts
src/lib/app-scss/: index.scss
src/lib/component/: FieldFileDialog.svelte  FolderViewer.svelte
src/lib/dialog/: Config.svelte
src/lib/header/: Header.svelte
src/lib/menu/: LeftMenu.svelte  SubMenu.svelte  menu.util.ts
src/lib/tauri/: _tauri.scss  dialog.ts  event.ts  mocks.ts  tauri.dsl.ts  tauri.fs.ts  tauri.sql.ts  tauri.ts  window.ts
src/lib/util/: filename.util.ts  page.util.ts  query.util.js
src/lib/youi/: FormCheck.svelte  FormFeedback.svelte  InlineCheckbox.svelte  Input.svelte  Label.svelte  index.scss  index.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte  __layout.svelte  about.svelte  index.svelte
src/routes/(submenu)/: +layout.svelte  +layout.ts
src/routes/dmp/: __layout.svelte  store.ts
src/routes/estimate/: index.svelte
static/: splashscreen.html
static/js/: codemirror.js
(+361 files in other folders)
