[package]
name = "app"
version = "0.1.0"
description = "stats desktop"
authors = ["youi"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.4", features = [] }

[dependencies]
serde_json = "1.0"
dirs = "4.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.4", features = ["api-all"] }
youi-core = {version = "0.1.0",git = "https://github.com/zhyi12/youi-rust-framework"}
youi-sqlite = {version = "0.1.0",git = "https://github.com/zhyi12/youi-rust-framework"}
youi-app-config = {version = "0.1.0",git = "https://github.com/zhyi12/youi-rust-framework"}
r2d2 = "0.8"
diesel = { version = "1.4.8", features = ["sqlite","r2d2"] }
tauri-plugin-sql= {version="0.0.0",git="https://github.com/tauri-apps/tauri-plugin-sql",features = ["sqlite"] }
tauri-plugin-fs-watch={version="0.0.0",git="https://github.com/tauri-apps/tauri-plugin-fs-watch"}

polars-core = "0.20.0"
polars-lazy = "0.20.0"
polars-io = {version="0.20.0",features=["csv-file","json"]}

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
